# rust-advent-of-code

./: .gitignore  Cargo.toml  README.md  TODO.md  shell.nix
aoc-2018-1/src/: main.rs
aoc-2018-2/: Cargo.toml
aoc-2018-2/src/: main.rs
aoc-2018-3/data/: challenge.md
aoc-2018-3/src/: lib.rs  main.rs
aoc-2018-4/src/: main.rs
aoc-2018-5/src/: main.rs
aoc-2018-6/: Cargo.toml
aoc-2018-6/data/: challenge.md
aoc-2018-6/src/: lib.rs  main.rs
aoc-2018-day-1/: Cargo.toml
aoc-2018-day-1/data/: challenge.md
aoc-2018-day-1/src/: main.rs
aoc-2018-day-2/data/: challenge.md
aoc-2018-day-2/src/: main.rs
aoc-2018-day-3/: Cargo.toml
aoc-2018-day-3/src/: lib.rs  main.rs
aoc-2018-day-4/: Cargo.toml
aoc-2018-day-4/data/: challenge.md
aoc-2018-day-5/: Cargo.toml
aoc-2018-day-5/data/: challenge.md
aoc-2018-day-5/src/: main.rs
aoc-2022-1/: Cargo.toml
aoc-2022-1/data/: challenge.md
aoc-2022-1/src/: lib.rs  main.rs
aoc-2022-10/: Cargo.toml
aoc-2022-10/data/: challenge.md
aoc-2022-10/src/: lib.rs  main.rs
aoc-2022-11/: 2  Cargo.toml
aoc-2022-11/data/: challenge.md
aoc-2022-11/examples/: sample.rs  test.rs
aoc-2022-11/src/: lib.rs  main.rs
aoc-2022-12/: 3  Cargo.toml
aoc-2022-12/data/: challenge.md
aoc-2022-12/src/: lib.rs  main.rs  position.rs
aoc-2022-13/: Cargo.toml
aoc-2022-14/: Cargo.toml
aoc-2022-15/: Cargo.toml
aoc-2022-16/: Cargo.toml
aoc-2022-17/: Cargo.toml
aoc-2022-18/: Cargo.toml
aoc-2022-19/: Cargo.toml
aoc-2022-2/: Cargo.toml
aoc-2022-20/: Cargo.toml  test.py
aoc-2022-21/: Cargo.toml
aoc-2022-22/: Cargo.toml
aoc-2022-22/data/: challenge.md
aoc-2022-22/src/: cube.rs  grid.rs  lib.rs  main.rs  part1.rs
aoc-2022-23/: Cargo.toml
aoc-2022-24/: Cargo.toml
aoc-2022-25/: Cargo.toml
aoc-2022-3/: Cargo.toml
aoc-2022-4/: Cargo.toml
aoc-2022-5/: Cargo.toml
aoc-2022-6/: Cargo.toml
aoc-2022-7/: Cargo.toml
aoc-2022-8/: Cargo.toml
aoc-2022-9/: Cargo.toml
aoc-2023-1/: Cargo.toml
aoc-2023-10/: Cargo.toml
aoc-2023-11/: Cargo.toml
aoc-2023-12/: Cargo.toml
aoc-2023-13/: Cargo.toml
aoc-2023-14/: Cargo.toml
aoc-2023-15/: Cargo.toml
aoc-2023-16/: Cargo.toml
aoc-2023-17/: Cargo.toml
aoc-2023-18/: Cargo.toml
aoc-2023-19/: Cargo.toml
aoc-2023-2/: Cargo.toml
aoc-2023-20/: Cargo.toml
aoc-2023-21/: Cargo.toml  counts.txt
aoc-2023-22/: Cargo.toml
aoc-2023-23/: Cargo.toml
aoc-2023-24/: Cargo.toml
aoc-2023-24/data/: challenge.md
aoc-2023-24/src/: lib.rs  main.rs
aoc-2023-25/: Cargo.toml  graph.dot  graph.dot.dot
aoc-2023-3/: Cargo.toml
aoc-2023-4/: Cargo.toml
aoc-2023-5/: Cargo.toml
aoc-2023-6/: Cargo.toml
aoc-2023-7/: Cargo.toml
aoc-2023-8/: Cargo.toml
aoc-2023-9/: Cargo.toml
aoc-common/: Cargo.toml
(+141 files in other folders)
