[workspace]

members = [
    "aoc-common",
    "aoc-2018-1",
    "aoc-2018-2",
    "aoc-2018-3",
    "aoc-2018-4",
    "aoc-2018-5",
    "aoc-2018-6",
    "aoc-2022-1",
    "aoc-2022-2", "aoc-2022-3", "aoc-2022-4", "aoc-2022-5", "aoc-2022-6", "aoc-2022-7", "aoc-2022-8", "aoc-2022-9", "aoc-2022-10", "aoc-2022-11", "aoc-2022-12", "aoc-2022-13", "aoc-2022-14", "aoc-2022-15", "aoc-2022-16", "aoc-2022-17", "aoc-2022-17", "aoc-2022-17", "aoc-2022-17", "aoc-2022-18", "aoc-2022-18", "aoc-2022-19", "aoc-2022-19", "aoc-2022-19", "aoc-2022-20", "aoc-2022-21", "aoc-2022-17", "aoc-2022-22", "aoc-2022-23", "aoc-2022-24", "aoc-2022-25", "aoc-2023-1", "aoc-2023-2", "aoc-2023-3", "aoc-2023-4", "aoc-2023-5", "aoc-2023-6", "aoc-2023-7", "aoc-2023-8", "aoc-2023-9", "aoc-2023-10", "aoc-2023-11", "aoc-2023-12", "aoc-2023-13", "aoc-2023-14", "aoc-2023-15", "aoc-2023-16", "aoc-2023-17", "aoc-2023-18", "aoc-2023-19", "aoc-2023-20", "aoc-2023-20", 
]
resolver = "2"


[profile.release]
debug = true
