[package]
name = "aoc-2022-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-common = { version = "0.1.0", path = "../aoc-common" }
itertools = "0.10.5"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"]  }
nom = "7.1.1"
thiserror="*"
