[package]
name = "aoc-2023-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="*"
nalgebra="*"
nalgebra-lapack="*"
argmin = { version = "0.8" }
argmin-math = { version = "0.3", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
